---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "var w : real\nvar s : string\nget s : w\n"
---
"w"@(FileId(1), 4..5) [ConstVar(Var, No)]: real
"s"@(FileId(1), 17..18) [ConstVar(Var, No)]: string
"<root>"@(dummy) [Module(No)]: <error>

error at (FileId(1), 36..37): mismatched types
| note for (FileId(1), 36..37): this is of type `real`
| info: `real` is not an integer type
